<resources>
    <string name="app_name"><b>Registration App</b></string>
    <string name="header">Registration Form</string>
    <string name="subheader">Welcome to Adventure Learning Club!</string>
    <string name="fn">Full Name</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="id">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>