<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subheader"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/fn"
        android:textColorHint="#bdbdbd"/>

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/id"
        android:textColorHint="#bdbdbd"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/school"
        android:textColorHint="#bdbdbd"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/email"
        android:textColorHint="#bdbdbd"/>

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/phone"
        android:textColorHint="#bdbdbd"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Male"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="60dp"
                android:textColor="@color/white" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/register" />


</LinearLayout>